fix background repeat on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body{
     font-family: 'Lato', sans-serif;
     font-size: 1.5rem;
     letter-spacing: .025rem;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 a{
     color: white;
